[package]
name = "common-pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
lazy-regex = "2.4.1"
lazy_static = "1.4.0"
regex = "1.7.1"
base64 = "0.21.0"
hex = "0.4.3"
futures = "0.3.25"
tokio = { workspace = true }
